<resources>
    <!-- Parse -->
    <!-- SB -->
    <!--<string name="parse_app_id">DrECmIAzwm5sp9qGouQzZnNC0Ya0uWoemHnRhxbS</string>-->
    <!--<string name="parse_client_key">52OMxk1lUCqYBpVtSqjompMtxtYCKlbrQGvtE3AE</string>-->

    <string name="parse_app_id">rFoHa7dbffxXh8qbEgiAwcc5KpT1lGt0E3srKzzK</string>
    <string name="parse_client_key">6SUzIyD1sYP99qB2BK4LvklKR07Xfydoh1GdXm00</string>

    <string name="facebook_app_id">630821477017440</string>
    <string name="twitter_consumer_key">eMOfuQwjbLcyiDlpFRbCICLlj</string>
    <string name="twitter_consumer_secret">RCgqKGrErsjKR10y0QxCbzkiTJ6ga5unWkRYpHZQJNrd0bkmmh</string>

    <string name="stripe_secret_key">sk_test_ZgkKo8wULQDT1H6SQzmZRavN</string>
    <string name="stripe_publishable_key">pk_test_TenZdV98Aw7MJvxuDn8Q4uJY</string>

    <string name="app_name">The TK</string>

    <string name="hello_world">Town Kitchen scaffolding</string>

    <!-- tutorial activity -->
    <string name="tutorial_step1_title">Order Online</string>
    <string name="tutorial_step1_description">Up to 48 hours in advanced</string>

    <string name="tutorial_step2_title">We\'ll email you</string>
    <string name="tutorial_step2_description">With your 30 minute delivery window</string>

    <string name="tutorial_step3_title">We craft lunch</string>
    <string name="tutorial_step3_description">You stay where you are</string>

    <string name="tutorial_step4_title">We deliver!</string>
    <string name="tutorial_step4_description">To your door for orders 6 or more \n To the curb otherwise</string>
    <!-- menu action -->
    <string name="action_shoppingcart">Shopping Cart</string>
    <string name="action_calendar">select day</string>

    <!-- menu -->
    <string name="menu_logout">Logout</string>

    <!-- drawer -->
    <string name="title_activity_abstract_main">AbstractMainActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_daily_menu">DailyMenuActivity</string>

    <!-- menu -->
    <string name="foodImageDesc">Food Image</string>

    <!-- shopping cart -->
    <string name="shippedDay">Shipping Day</string>
    <string name="optionNameDesc">option name desc</string>
    <string name="foodPrice">$$</string>
    <string name="subtotalDesc">SUBTOTAL</string>
    <string name="taxDesc">TAX</string>
    <string name="shippingCostDesc">DELIVERY</string>
    <string name="totalDesc">TOTAL</string>
    <string name="CreditCard">CC Number</string>
    <item name="shippingCostDesc" type="id">DELIVERY</item>

    <!-- feedback -->
    <string name="FeedbackText">Your Comment</string>

    <!-- dialog payment -->
    <string name="payment_ok">Pay</string>
    <string name="ccnumber">Card Number</string>
    <string name="ccvnumber">CCV Number</string>
    <string-array name="year_array">
        <item>Year</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>

    <string-array name="month_array">
        <item>Month</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="change_card_text">Change card</string>
    <string name="progress_payment_text">Processing payment....</string>
    <string name="progress_payment_finalized_text">Finalizing order...</string>


    <!-- dialog ok/cancel button -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="feedback_to_twitter">Share feedback</string>
    <string name="change_order_text">Want to change order?</string>
    <string name="error_empty_address">Delivery address cannot be empty</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="action_settings">Settings</string>

    <string name="demo_header_exampletitle1">Show more...</string>

</resources>
