<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="10dp"
    android:background="@drawable/shopping_cart_item_bg"
    >


    <ImageView
        android:id="@+id/ivFoodImageUrl"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/foodImageDesc"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
            android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shippedDay"
        android:id="@+id/tvShippingDay"
        android:layout_toRightOf="@+id/ivFoodImageUrl"
        android:layout_toEndOf="@+id/ivFoodImageUrl"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:layout_alignParentTop="true"
            android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/optionNameDesc"
        android:id="@+id/tvOptionName"
        android:layout_toRightOf="@+id/tvQty"
        android:layout_below="@+id/tvShippingDay" />

    <TextView
        android:layout_width="wrap_content"
        android:maxWidth="300dp"
        android:ellipsize="end"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvOptionDesc"
        android:text="@string/optionNameDesc"
        android:layout_below="@+id/tvOptionName"
        android:layout_toRightOf="@+id/tvQty"
            />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:text="@string/foodPrice"
              android:id="@+id/tvFoodPrice"
              android:layout_alignParentRight="true"
              android:layout_alignTop="@id/tvOptionDesc"
              android:gravity="right"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tvQty"
            android:layout_alignBottom="@+id/tvOptionDesc"
            android:background="@drawable/blue_badge_shape"
            android:textColor="#fff"
            android:layout_marginRight="10dp"
            />


</RelativeLayout>