<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivFoodImageUrl"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:contentDescription="@string/foodImageDesc"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shippedDay"
        android:id="@+id/tvShippingDay"
        android:layout_toRightOf="@+id/ivFoodImageUrl"
        android:layout_toEndOf="@+id/ivFoodImageUrl"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/optionNameDesc"
        android:id="@+id/tvOptionName"
        android:layout_toRightOf="@+id/ivFoodImageUrl"
        android:layout_below="@+id/tvShippingDay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tvOptionDesc"
        android:layout_below="@+id/tvOptionName"
        android:layout_toRightOf="@+id/ivFoodImageUrl"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--android:text="@string/tweet_since"-->
        <!--android:id="@+id/tweetSince"-->
        <!--android:layout_alignBottom="@+id/screenName"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentTop="true" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--android:text="@string/tweet_desc"-->
        <!--android:id="@+id/tweetDescription"-->
        <!--android:autoLink="all"-->
        <!--android:linksClickable="true"-->
        <!--android:layout_below="@+id/userName"-->
        <!--android:layout_alignLeft="@+id/userName"-->
        <!--android:layout_alignStart="@+id/userName" />-->

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/favoriteIcon"-->
        <!--android:contentDescription="@string/favourite_icon"-->
        <!--android:src="@drawable/favourite_small_star"-->
        <!--android:paddingRight="2dp"-->
        <!--android:layout_below="@+id/tweetDescription"-->
        <!--android:layout_alignLeft="@+id/tweetDescription"-->
        <!--android:layout_alignStart="@+id/tweetDescription" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--android:id="@+id/favoriteCount"-->
        <!--android:layout_alignTop="@+id/favoriteIcon"-->
        <!--android:layout_toRightOf="@+id/favoriteIcon"-->
        <!--android:layout_alignBottom="@+id/favoriteIcon"-->
        <!--/>-->


</RelativeLayout>